--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?81582"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?93846"></script>
 	</div>
 
 	<!-- end copy -->
@@ -35,25 +35,30 @@
 
 	<div style="display:none" aria-hidden=true>
 
+		<div>Physical
+Sciences
+</div>
+		<div>1)</div>
+		<div></div>
+		<div>Research Abstracts</div>
+		<div>Humanities</div>
+		<div>Introduction to Research Abstracts</div>
+		<div>What are some tips on how to write an effective abstract?</div>
+		<div>4) Choose one of the fields of study below to view a sample abstract and a deconstruction of its components.</div>
+		<div>2)</div>
+		<div>What is a research abstract?</div>
+		<div>3)</div>
+		<div>Comparing a less effective and more effective abstract
+</div>
 		<div>Social 
 Sciences
 </div>
 		<div>Life 
 Sciences
 </div>
-		<div>Click here to compare a ‘good’ vs ‘bad’ abstract
-</div>
-		<div>Research Abstracts</div>
-		<div>Physical
-Sciences
-</div>
-		<div>Click here to read some tips on how to write an effective abstract</div>
-		<div>Click here to learn what a research abstract is</div>
-		<div></div>
-		<div>Choose one of the fields of study below to view a sample abstract and a deconstruction of its components.</div>
-		<div>Humanities</div>
 		<div>Results</div>
 		<div>Tekin, E., Beppler, C., White, C., Mao, Z., Savage, V. M., & Yeh, P. J. (2016). Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs. Journal of The Royal Society Interface, 13(119) </div>
+		<div>Click here to learn what a research abstract is</div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
 		<div>Interactions among drugs play a critical role in the killing efficacy of multi-drug treatments. Recent advances in theory and experiment for three-drug interactions enable the search for emergent interactions—ones not predictable from pairwise interactions. Previous work has shown it is easier to detect synergies and antagonisms among pairwise interactions when a rescaling method is applied to the interaction metric. However, no study has carefully examined whether new types of normalization might be needed for emergence. Here, we propose several rescaling methods for enhancing the classification of the higher order drug interactions based on our conceptual framework. To choose the rescaling that best separates synergism, antagonism and additivity, we conducted bacterial growth experiments in the presence of single, pairwise and triple-drug combinations among 14 antibiotics. We found one of our rescaling methods is far better at distinguishing synergistic and antagonistic emergent interactions than any of the other methods. Using our new method, we find around 50% of emergent interactions are additive, much less than previous reports of greater than 90% additivity. We conclude that higher order emergent interactions are much more common than previously believed, and we argue these findings for drugs suggest that appropriate rescaling is crucial to infer higher order interactions.
 
@@ -76,12 +81,13 @@ EndFragment</div>
 3. Results or findings
 4. Significance of the findings
 </div>
-		<div>Click to read some tips on how to write an effective abstract</div>
+		<div>Read some tips on how to write an effective abstract</div>
 		<div>What is a Research Abstract?</div>
 		<div>An abstract is essentially a snapshot of your research project. It describes your research question or argument, the components and methodology of your project, and the significance of your project. 
 </div>
 		<div>An abstract is a one-paragraph summary of a research project that includes:
 </div>
+		<div>Return to home</div>
 		<div>When you apply to present your work as a paper or poster, you typically have to submit an abstract. Many conferences select participants based primarily on their abstract. When you submit a paper to a journal for publication, you also usually submit an abstract, which accompanies the paper. 
 </div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
@@ -168,13 +174,9 @@ EndFragment</div>
 </div>
 		<div>In this paper, we re-examine the notion of non-restrictive relative clauses (NRRCs) in the light of spoken corpus evidence, based on an analysis of 692 occurrences of non-restrictive which-clauses in British and American spoken English data. After reviewing traditional conceptions of NRRCs and some recent work on the broader notion of subordination in spoken grammar, we discuss the problem of identifying such clauses. We then present examples from our corpora and a concordance-based analysis of co-textual and contextual factors. A smaller sample of 214 occurrences is then subjected to a more detailed analysis, using a relational database. We conclude that non-restrictive which-clauses fall into three broad functional type: expansion, evaluation, and affirmation, with the category of evaluation being the most frequent. In all three cases, pragmatic factors, rather than semantic requirements, explicate their use. Our results also show regular collocations with copular verb-froms and with certain types of discourse markers and modal items. Turn-taking is also considered, and three-recurring phenomena are discussed: which-clauses as turn extensions, the occurrence of the NRRC following a response token from the listener, and second-speaker construction of the NRRC. We use the results of our analysis to contribute to current debates on the notion of categories such as subordination in spoken grammar, on grammar and situated interaction, and on the status of probabilities in grammatical description. 
 EndFragment</div>
-		<div>-Locate national conferences in your discipline and find sample abstracts
--Locate abstracts from disciplinary journals. You can access journals in your field through UCLA Library Research Guides and databases
-</div>
-		<div>Go to next page </div>
 		<div>1. Abstracts do not usually contain citations. </div>
 		<div>2. Review abstracts from your field.</div>
-		<div>Click to learn what a research abstract is</div>
+		<div>Go back to learn what a research abstract is</div>
 		<div>-If you do not yet have results, discuss this in your abstract
 -Indicate what you plan to do rather than what you’ve done
 -Also indicate the significance of completing this project
@@ -184,12 +186,17 @@ EndFragment</div>
 		<div>-Abstracts should be stand-alone documents with your ideas placed at the forefront
 -An exception to this rule is if your project is extending, modifying, or rebutting a major work. In this case, you will include the citation within the body of the paragraph.
 </div>
+		<div>-Locate national conferences in your discipline and find sample abstracts
+-Locate abstracts from disciplinary journals. You can access journals in your field through UCLA Library Research Guides and databases
+</div>
 		<div>Abstract Tips</div>
+		<div>Read more abstract tips</div>
 		<div>5. Proofread before submitting.
 </div>
+		<div>Go back to first page of abstract tips</div>
 		<div>4. Abstracts should be comprehensible.
 </div>
-		<div>Go to previous page </div>
+		<div>Compare an ineffective and effective abstract</div>
 		<div>-Double-check spelling and grammar
 -Print and read aloud
 -Have friend review your abstract as well
@@ -198,22 +205,25 @@ EndFragment</div>
 		<div>-Readers should not need to refer to other work to understand your project
 -Remember to write your abstract with the audience in mind to decide how broad or specific the information should be. 
 </div>
-		<div>Take a look at a ‘bad’ abstract and try to identify what parts of it can be improved
-</div>
-		<div>Click here to view a good abstract</div>
-		<div>Sample 'Bad’ Abstract:</div>
-		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kep track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
-		<div>Comparing a Good VS Bad Abstract</div>
 		<div>Click here to read about what’s wrong with this abstract</div>
-		<div>Click here to view a bad abstract</div>
-		<div>Click here to read about what makes this abstract good. </div>
-		<div>Sample Good Abstract:</div>
+		<div>View an effective abstract</div>
+		<div>Ineffective Abstract:</div>
+		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kep track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
+		<div>Go back to abstract tips</div>
+		<div>Take a look at an ineffective abstract and try to identify what parts of it can be improved
+</div>
+		<div>Comparing an Ineffective and Effective Abstract</div>
+		<div>Go back to an ineffective abstract</div>
 		<div>Mathematical Education: Modern vs Traditional Approaches
 Mikey Bruin, Education (Class of 2017)
 Research Advisor: Deborah Pacini Hernandez
 </div>
+		<div>Comparing a Good VS Bad Abstract</div>
+		<div>Return to home and view sample abstract from your field of study</div>
+		<div>Effective Abstract:</div>
+		<div>Click here to read about what makes this abstract effective.</div>
 		<div>Beginning in 1991, a pilot program was introduced to increase the efficacy of early mathematics education. The program sought to replace traditional flashcard and practice test approaches with computerized adaptive testing (CAT) in 19 schools across Southern California. A study conducted by a ‘No Child Left Beind’ research group in 2002 concluded that the CAT tests were effective and lead to increased student retention of mathematical information. The present research revisits these results 24 years after the introduction of the pilot program and aims to refute the original findings. Drawing from studies with students from 32 classes of approximately 24 students per class (a total of 772 students), data collected over a period of 9 months and analysis of timed score results were compared to the scores of the previous three years. Outcomes proved that there is no discernable difference between using only the CAT or only the flashcard method; rather, a combination of both methods yields the highest increase in mathematical retention over time. The findigns of the study have broader implications to fact-based early elementary school education.  </div>
-		<div>Take a look at a ‘good’ abstract and try to think about what makes it effective.</div>
+		<div>Take a look at an effective abstract and try to think about what makes it effective.</div>
 		<div>1) Title: it lacks a title 
 2) Introduction: it is written in first person and tenses change. There is no context or background information to relevant work in the field.
 3) Argument or research question: poorly written. Research question is not well defined.
