--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?93846"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?56695"></script>
 	</div>
 
 	<!-- end copy -->
@@ -58,7 +58,6 @@ Sciences
 </div>
 		<div>Results</div>
 		<div>Tekin, E., Beppler, C., White, C., Mao, Z., Savage, V. M., & Yeh, P. J. (2016). Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs. Journal of The Royal Society Interface, 13(119) </div>
-		<div>Click here to learn what a research abstract is</div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
 		<div>Interactions among drugs play a critical role in the killing efficacy of multi-drug treatments. Recent advances in theory and experiment for three-drug interactions enable the search for emergent interactions—ones not predictable from pairwise interactions. Previous work has shown it is easier to detect synergies and antagonisms among pairwise interactions when a rescaling method is applied to the interaction metric. However, no study has carefully examined whether new types of normalization might be needed for emergence. Here, we propose several rescaling methods for enhancing the classification of the higher order drug interactions based on our conceptual framework. To choose the rescaling that best separates synergism, antagonism and additivity, we conducted bacterial growth experiments in the presence of single, pairwise and triple-drug combinations among 14 antibiotics. We found one of our rescaling methods is far better at distinguishing synergistic and antagonistic emergent interactions than any of the other methods. Using our new method, we find around 50% of emergent interactions are additive, much less than previous reports of greater than 90% additivity. We conclude that higher order emergent interactions are much more common than previously believed, and we argue these findings for drugs suggest that appropriate rescaling is crucial to infer higher order interactions.
 
@@ -193,7 +192,7 @@ EndFragment</div>
 		<div>Read more abstract tips</div>
 		<div>5. Proofread before submitting.
 </div>
-		<div>Go back to first page of abstract tips</div>
+		<div>Go back to abstract tips</div>
 		<div>4. Abstracts should be comprehensible.
 </div>
 		<div>Compare an ineffective and effective abstract</div>
@@ -209,11 +208,9 @@ EndFragment</div>
 		<div>View an effective abstract</div>
 		<div>Ineffective Abstract:</div>
 		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kep track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
-		<div>Go back to abstract tips</div>
 		<div>Take a look at an ineffective abstract and try to identify what parts of it can be improved
 </div>
 		<div>Comparing an Ineffective and Effective Abstract</div>
-		<div>Go back to an ineffective abstract</div>
 		<div>Mathematical Education: Modern vs Traditional Approaches
 Mikey Bruin, Education (Class of 2017)
 Research Advisor: Deborah Pacini Hernandez
@@ -224,6 +221,7 @@ Research Advisor: Deborah Pacini Hernandez
 		<div>Click here to read about what makes this abstract effective.</div>
 		<div>Beginning in 1991, a pilot program was introduced to increase the efficacy of early mathematics education. The program sought to replace traditional flashcard and practice test approaches with computerized adaptive testing (CAT) in 19 schools across Southern California. A study conducted by a ‘No Child Left Beind’ research group in 2002 concluded that the CAT tests were effective and lead to increased student retention of mathematical information. The present research revisits these results 24 years after the introduction of the pilot program and aims to refute the original findings. Drawing from studies with students from 32 classes of approximately 24 students per class (a total of 772 students), data collected over a period of 9 months and analysis of timed score results were compared to the scores of the previous three years. Outcomes proved that there is no discernable difference between using only the CAT or only the flashcard method; rather, a combination of both methods yields the highest increase in mathematical retention over time. The findigns of the study have broader implications to fact-based early elementary school education.  </div>
 		<div>Take a look at an effective abstract and try to think about what makes it effective.</div>
+		<div>Go back to the ineffective abstract</div>
 		<div>1) Title: it lacks a title 
 2) Introduction: it is written in first person and tenses change. There is no context or background information to relevant work in the field.
 3) Argument or research question: poorly written. Research question is not well defined.
