--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?56695"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?65217"></script>
 	</div>
 
 	<!-- end copy -->
@@ -65,7 +65,7 @@ Sciences
 		<div>Research Question</div>
 		<div>Conclusions</div>
 		<div>Life Sciences Sample Abstract</div>
-		<div>Click to return to home</div>
+		<div>Return to home</div>
 		<div>Approach/
 Methodology
 </div>
@@ -86,7 +86,6 @@ EndFragment</div>
 </div>
 		<div>An abstract is a one-paragraph summary of a research project that includes:
 </div>
-		<div>Return to home</div>
 		<div>When you apply to present your work as a paper or poster, you typically have to submit an abstract. Many conferences select participants based primarily on their abstract. When you submit a paper to a journal for publication, you also usually submit an abstract, which accompanies the paper. 
 </div>
 		<div>Enhanced identification of synergistic and antagonistic emergent interactions among three or more drugs</div>
@@ -215,11 +214,10 @@ EndFragment</div>
 Mikey Bruin, Education (Class of 2017)
 Research Advisor: Deborah Pacini Hernandez
 </div>
-		<div>Comparing a Good VS Bad Abstract</div>
 		<div>Return to home and view sample abstract from your field of study</div>
 		<div>Effective Abstract:</div>
 		<div>Click here to read about what makes this abstract effective.</div>
-		<div>Beginning in 1991, a pilot program was introduced to increase the efficacy of early mathematics education. The program sought to replace traditional flashcard and practice test approaches with computerized adaptive testing (CAT) in 19 schools across Southern California. A study conducted by a ‘No Child Left Beind’ research group in 2002 concluded that the CAT tests were effective and lead to increased student retention of mathematical information. The present research revisits these results 24 years after the introduction of the pilot program and aims to refute the original findings. Drawing from studies with students from 32 classes of approximately 24 students per class (a total of 772 students), data collected over a period of 9 months and analysis of timed score results were compared to the scores of the previous three years. Outcomes proved that there is no discernable difference between using only the CAT or only the flashcard method; rather, a combination of both methods yields the highest increase in mathematical retention over time. The findigns of the study have broader implications to fact-based early elementary school education.  </div>
+		<div>Beginning in 1991, a pilot program was introduced to increase the efficacy of early mathematics education. The program sought to replace traditional flashcard and practice test approaches with computerized adaptive testing (CAT) in 19 schools across Southern California. A study conducted by a ‘No Child Left Beind’ research group in 2002 concluded that the CAT tests were effective and lead to increased student retention of mathematical information. The present research revisits these results 24 years after the introduction of the pilot program and aims to refute the original findings. Drawing from studies with students from 32 classes of approximately 24 students per class (a total of 772 students), data collected over a period of 9 months and analysis of timed score results were compared to the scores of the previous three years. Outcomes proved that there is no discernable difference between using only the CAT or only the flashcard method; rather, a combination of both methods yields the highest increase in mathematical retention over time. The findings of the study have broader implications to fact-based early elementary school education.  </div>
 		<div>Take a look at an effective abstract and try to think about what makes it effective.</div>
 		<div>Go back to the ineffective abstract</div>
 		<div>1) Title: it lacks a title 
