--- a/assets/animation/abstract-animation.html
+++ b/assets/animation/abstract-animation.html
@@ -24,7 +24,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="abstractanimation_hype_container" style="margin:auto;position:relative;width:800px;height:600px;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?75711"></script>
+		<script type="text/javascript" charset="utf-8" src="abstract-animation.hyperesources/abstractanimation_hype_generated_script.js?16058"></script>
 	</div>
 
 	<!-- end copy -->
@@ -179,18 +179,11 @@ EndFragment</div>
 		<div>1. Abstracts do not usually contain citations. </div>
 		<div>2. Review abstracts from your field.</div>
 		<div>Go back to learn what a research abstract is</div>
-		<div>-If you do not yet have results, discuss this in your abstract
--Indicate what you plan to do rather than what you’ve done
--Also indicate the significance of completing this project
-</div>
+		<div>If you do not yet have results, discuss this in your abstractIndicate what you plan to do rather than what you’ve doneAlso indicate the significance of completing this project</div>
 		<div>3. Results are not always necessary.
 </div>
-		<div>-Abstracts should be stand-alone documents with your ideas placed at the forefront
--An exception to this rule is if your project is extending, modifying, or rebutting a major work. In this case, you will include the citation within the body of the paragraph.
-</div>
-		<div>-Locate national conferences in your discipline and find sample abstracts
--Locate abstracts from disciplinary journals. You can access journals in your field through UCLA Library Research Guides and databases
-</div>
+		<div>Abstracts should be stand-alone documents with your ideas placed at the forefrontAn exception to this rule is if your project is extending, modifying, or rebutting a major work. In this case, you will include the citation within the body of the paragraph.</div>
+		<div>Locate national conferences in your discipline and find sample abstractsLocate abstracts from disciplinary journals. You can access journals in your field through UCLA Library Research Guides and databases</div>
 		<div>Abstract Tips</div>
 		<div>Read more abstract tips</div>
 		<div>5. Proofread before submitting.
@@ -199,18 +192,12 @@ EndFragment</div>
 		<div>4. Abstracts should be comprehensible.
 </div>
 		<div>Compare an ineffective and effective abstract</div>
-		<div>-Double-check spelling and grammar
--Print and read aloud
--Have friend review your abstract as well
--Review the guidelines to check for length and format restrictions for the particular journal or conference you are submitting your abstract to 
-</div>
-		<div>-Readers should not need to refer to other work to understand your project
--Remember to write your abstract with the audience in mind to decide how broad or specific the information should be. 
-</div>
+		<div>Double-check spelling and grammarPrint and read aloudHave a friend review your abstract as wellReview the guidelines to check for length and format restrictions for the particular journal or conference you are submitting your abstract to </div>
+		<div>Readers should not need to refer to other work to understand your projectRemember to write your abstract with the audience in mind to decide how broad or specific the information should be. </div>
 		<div>Click here to read about what’s wrong with this abstract</div>
 		<div>View an effective abstract</div>
 		<div>Ineffective Abstract:</div>
-		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kep track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
+		<div>I am interested in investigating if students have learned their math facts using online resources as compared to traditional practice tests and flashcards. Using computers in the computer lab, the teacher’s class of 24 students will work at one or more of several different websites that promote learning math facts. Students spent time in the lab each week. Students kept track of their scores and at the end of the project the students note any improvements or decline in their accuracy and time. Results from this year were compared to class averages from the past three years when students only used the traditional practice tests and flash cards to see if students show any improvement over past classes. </div>
 		<div>Take a look at an ineffective abstract and try to identify what parts of it can be improved
 </div>
 		<div>Comparing an Ineffective and Effective Abstract</div>
