--- a/assets/animation/finding-articles.html
+++ b/assets/animation/finding-articles.html
@@ -35,7 +35,7 @@
 	<!-- copy these lines to your document: -->
 
 	<div id="findingarticles_hype_container" style="margin:auto;position:relative;width:100%;height:100%;overflow:hidden;">
-		<script type="text/javascript" charset="utf-8" src="finding-articles.hyperesources/findingarticles_hype_generated_script.js?1792"></script>
+		<script type="text/javascript" charset="utf-8" src="finding-articles.hyperesources/findingarticles_hype_generated_script.js?27792"></script>
 	</div>
 
 	<!-- end copy -->
@@ -46,7 +46,7 @@
 
 	<div style="display:none" aria-hidden=true>
 
-		<div>2007
+		<div>1967
 </div>
 		<div>2017
 </div>
@@ -56,38 +56,16 @@
 		<div>Articles</div>
 		<div>DATE RANGE</div>
 		<div>From</div>
-		<div>CONTINUE</div>
 		<div>to</div>
-		<div>1.          Article Title
-               Last, First. Publication Name. Date.
-               Abstract text.  
-
-</div>
+		<div>navigate_next</div>
 		<div>Abstracts</div>
-		<div>2.          Article Title
-               Last, First. Publication Name. Date.
-               Abstract text.  
-
-</div>
 		<div>Books</div>
-		<div>Search Results: 1-50 of 150,000</div>
-		<div>3.          Article Title
-               Last, First. Publication Name. Date.
-               Abstract text.  
-
-</div>
 		<div>crow OR raven OR rook OR corvid</div>
 		<div>
 </div>
 		<div>empathy OR emotion OR social intelligence</div>
-		<div>4.          Article Title
-               Last, First. Publication Name. Date.
-               Abstract text.  
-
-</div>
 		<div>Database Home Page</div>
 		<div>ITEM TYPE</div>
-		<div>View your initial results!</div>
 		<div>AND</div>
 		<div>Access home page for database of your choice.</div>
 		<div>Advanced searches in academic databases:
@@ -102,7 +80,7 @@
 		<div>Use filters to refine or narrow your search results.</div>
 		<div>COMING SOON!</div>
 		<div>To get started,
-choose the path that best fits your needs:
+click the path that best fits your needs:
 </div>
 		<div>Access the full text of an article relevant to your research.</div>
 		<div>Determine which databases are best suited to your research topic.</div>
@@ -118,6 +96,11 @@ choose the path that best fits your needs:
 </div>
 		<div>Successfully perform an advanced search in an academic database.</div>
 		<div></div>
+		<div>1.          Article Title
+               Last, First. Publication Name. Date.
+               Abstract text.  
+
+</div>
 		<div>Subject                                                >
 </div>
 		<div>REFINE RESULTS
@@ -134,13 +117,29 @@ References Available
 </div>
 		<div>Language                                            >
 </div>
+		<div>2.          Article Title
+               Last, First. Publication Name. Date.
+               Abstract text.  
+
+</div>
 		<div>Source Type                                      >
+</div>
+		<div>3.          Article Title
+               Last, First. Publication Name. Date.
+               Abstract text.  
+
 </div>
 		<div>Academic Journals
 Newspapers
 Trade Publications
 </div>
 		<div>Use filters in left side bar to further refine your results by full text, source types, subject, publisher, language, and more!</div>
+		<div>4.          Article Title
+               Last, First. Publication Name. Date.
+               Abstract text.  
+
+</div>
+		<div>Search Results: 1-50 of 150,000</div>
 		<div>Source Type                                      V
 </div>
 		<div>Select one of the databases to the right, click for their home page.  </div>
@@ -157,10 +156,13 @@ Trade Publications
 		<div>Visit the UCLA Library’s Databases by Subject Library Guide.</div>
 		<div>Web of Science
 </div>
-		<div>Feel free to open a database and follow along through the rest of the tutorial!
+		<div>Click below to open a database in a second browser window and follow along through the rest of the tutorial!
 </div>
+		<div>Accessing full text
+resources:</div>
 		<div>Check for full text PDF access directly on the search results page: it may be below or next to the listing.</div>
 		<div>Try UC-eLinks! It may be on the results page or article page.</div>
+		<div>Look on the individual page for the article. The publisher may grant you access, or it may point you to services like Google Scholar. </div>
 		<div>Article Title
 by: Last, First. 
 
@@ -172,9 +174,12 @@ You might see some keywords here.
 
 
 </div>
-		<div>Look on the individual page for the article. The publisher may grant you access, or it may point you to services like Google Scholar. </div>
-		<div>Accessing full text
-resources:</div>
+		<div>Looking for help with the next steps? 
+Stop by one of our many campus library locations!
+
+</div>
+		<div>library.ucla.edu
+</div>
 
 	</div>
 
