--- a/handouts/index.html
+++ b/handouts/index.html
@@ -26,12 +26,12 @@ title: Research and Writing Handouts
         <div class="row">
     <div class="col s12 m4">
       <div class="card">
-        <div class="card-content">
+        <div class="card-image">
            <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: Handout }}" width="100%"></img>
-            <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
-          <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p>
         </div>
         <div class="card-action">
+           <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
+          <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p>
           <a href="{{ post.url | prepend: site.baseurl }}">
             Read More
           </a>
