--- a/handouts/index.html
+++ b/handouts/index.html
@@ -19,11 +19,11 @@ title: Research and Writing Handouts
 
 <!-- cards by category -->
 {% for category in site.categories %}
-<h3 class="category-title"><a id="{{ category | first }}"></a><a href="{{ site.baseurl }}/categories/{{ category | first | slugify }}">{{ category | first }}</a></h3>
-<div class="row">    
+<h3 class="category-title"><a id="{{ category | first }}"></a><a href="{{ site.baseurl }}/categories/{{ category | first | slugify }}">{{ category | first }}</a></h3>  
    {% for posts in category %}
       {% for post in posts reversed %}
         {% if post.handout %}
+<div class="row">  
     <div class="col s12 m4">
       <div class="card">
         <div class="card-image">
@@ -32,7 +32,7 @@ title: Research and Writing Handouts
         </div>
         <div class="card-action">
            <span class="card-title"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></span>
-          <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p>
+          <!-- <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p> -->
          <!-- <a href="{{ post.url | prepend: site.baseurl }}">
             Read More
           </a>
