--- a/handouts/index.html
+++ b/handouts/index.html
@@ -31,7 +31,7 @@ title: Research and Writing Handouts
            <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: 'Handout' }}" width="100%"></img>
            </a>
         </div>
-        <div class="card-action">
+        <div>
            <span class="card-title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="PDF Handout" aria-label="Handout">{{ post.title }}</a></span>
           <!-- <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p> -->
          <!-- <a href="{{ post.url | prepend: site.baseurl }}">
