--- a/handouts/index.html
+++ b/handouts/index.html
@@ -4,7 +4,7 @@ title: Research and Writing Handouts
 ---
 <h3>Research and Writing Handouts</h3>
 
-<p>Whether you are just beginning to brainstorm or you are ready to share your research, there are handouts to help you at every stage of your writing process. Search for your paritcular need or explore our broader categories to get help with your researh and writing.</p>
+<p>Whether you are just beginning to brainstorm or you are ready to share your research, there are handouts to help you at every stage of your writing process. Search for your paritcular need or explore our broader categories to get help with your research and writing.</p>
 
 
 <!-- a list of categories -->
