--- a/embeds-slides/questions.html
+++ b/embeds-slides/questions.html
@@ -38,21 +38,21 @@
         <div class="slides">
             <section style="text-align: left;">
                 <h3>Start with Questions</h3>
-                <p class="intro"><span class="dropcap">Q</span>uestions drive research. The most rewarding research projects start with questions you care about and want to explore.</p> <img class="responsive-img materialboxed" src="https://dmcwo.github.io/research-tips/assets/img/content/question-map-examples.jpg" alt="Example question maps" data-caption="Example question maps">
+                <p class="intro"><span class="dropcap">Q</span>uestions drive research. The most rewarding research projects start with questions you care about and want to explore.</p> <iframe width="100%" height="315" src="https://www.youtube.com/embed/jj-F6YVtsxI?list=PLV8eqWoGXke5D5bmwscUhow1RJKWZmMRZ" frameborder="0" allowfullscreen></iframe>
             </section>
             <section style="text-align: left;">
-                <h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Give it a try:</h3>
-                <p class="flow-text">Before you search, start by brainstorming a of list questions. Write down all the questions you hope to be able to answer in your project as well as all the questions you are curious about. This work will pay off when you use these questions to generate great searches later!</p>
+                <div class="collapsible-header flowtext" style="border-bottom-style: solid; border-bottom-width: thin;"><i class="material-icons">ondemand_video</i>Need help generating questions? Check out these student examples or go to the next slide for some additional tips!</div>
+                        <div class="collapsible-body" style="border-bottom-style: solid; border-bottom-width: thick;">
+                            <img class="responsive-img materialboxed" src="https://dmcwo.github.io/research-tips/assets/img/content/question-map-examples.jpg" alt="Example question maps" data-caption="Example question maps">
+                        </div>
             </section>
 
             <section style="text-align: left; height: 100%;">
                 <h3>Tips:</h3>
                 <ul class="collapsible" data-collapsible="accordion" style="border-style: solid; border-width: thin;">
                     <li>
-                        <div class="collapsible-header flowtext" style="border-bottom-style: solid; border-bottom-width: thin;"><i class="material-icons">ondemand_video</i>Need help generating questions? Check out our quick video tutorial on developing a research question:</div>
-                        <div class="collapsible-body" style="border-bottom-style: solid; border-bottom-width: thick;">
-                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/jj-F6YVtsxI?list=PLV8eqWoGXke5D5bmwscUhow1RJKWZmMRZ" frameborder="0" allowfullscreen></iframe>
-                        </div></li>
+                       <h3><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Give it a try:</h3>
+                <p class="flow-text">Before you search, start by brainstorming a of list questions. Write down all the questions you hope to be able to answer in your project as well as all the questions you are curious about. This work will pay off when you use these questions to generate great searches later!</p></li>
 
                     <li>
                         <div class="collapsible-header" style="border-bottom-style: solid; border-bottom-width: thin;"><i class="material-icons">ondemand_video</i><em>From the lab to the studio</em> shows how UCLA students are exploring their passions in their research:</div>
