commented out the div

--- a/embeds-slides/questions.html
+++ b/embeds-slides/questions.html
@@ -41,8 +41,8 @@
                 <p class="intro"><span class="dropcap">Q</span>uestions drive research. The most rewarding research projects start with questions you care about and want to explore.</p> <iframe width="100%" height="315" src="https://www.youtube.com/embed/jj-F6YVtsxI?list=PLV8eqWoGXke5D5bmwscUhow1RJKWZmMRZ" frameborder="0" allowfullscreen></iframe>
             </section>
             <section style="text-align: left;">
-                <div class="collapsible-header flowtext" style="border-bottom-style: solid; border-bottom-width: thin;"><i class="material-icons">ondemand_video</i>Need help generating questions? Check out these student examples or go to the next slide for some additional tips!</div>
-                        <div class="collapsible-body" style="border-bottom-style: solid; border-bottom-width: thick;">
+                <div class="collapsible-header flowtext" style="border-bottom-style: solid; border-bottom-width: thin;"><i class="material-icons">ondemand_video</i>Need help generating questions? Check out these student examples or go to the next slide for some additional tips! <!--</div>
+                        <div class="collapsible-body" style="border-bottom-style: solid; border-bottom-width: thick;"> -->
                             <img class="responsive-img materialboxed" src="https://dmcwo.github.io/research-tips/assets/img/content/question-map-examples.jpg" alt="Example question maps" data-caption="Example question maps">
                         </div>
             </section>
