--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: front
-title: WI+RE: Writing Instruction + Research Education
+title: "WI+RE: Writing Instruction + Research Education"
 ---
