Removed + in title and included "and" instead of "+"

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: front
-title: "WI+RE: Writing Instruction + Research Education at UCLA"
+title: "WIRE: Writing Instruction and Research Education at UCLA"
 ---
