--- a/handouts/index.html
+++ b/handouts/index.html
@@ -19,7 +19,7 @@ title: Research and Writing Handouts
 
 <!-- cards by category -->
 {% for category in site.categories %}
-<h3 class="category-title"><a id="{{ category | first }}"></a><a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="PDF Handout" aria-label="Handout">{{ category | first }}</a></h3>  
+<h3 class="category-title"><a id="{{ category | first }}"></a><a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" </a></h3>  
    {% for posts in category %}
 <div class="row"> 
       {% for post in posts reversed %}
@@ -27,12 +27,12 @@ title: Research and Writing Handouts
     <div class="col s12 m4">
       <div class="card">
         <div class="card-image">
-           <a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="PDF Handout" aria-label="Handout">
-           <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: 'Handout' }}" width="100%"></img>
+           <a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="{{ post.title | append=" Handout"}}" aria-label="{{ post.title | append=" Handout"}}">
+           <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: ' Handout' }}" width="100%"></img>
            </a>
         </div>
         <div>
-           <center><span class="card-title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="PDF Handout" aria-label="Handout">{{ post.title }}</a></span></center>
+           <center><span class="card-title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank">{{ post.title }}</a></span></center>
           <!-- <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p> -->
          <!-- <a href="{{ post.url | prepend: site.baseurl }}">
             Read More
