--- a/handouts/index.html
+++ b/handouts/index.html
@@ -19,43 +19,25 @@ title: Research and Writing Handouts
 
 <!-- cards by category -->
 {% for category in site.categories %}
-<h3 class="category-title"><a id="{{ category | first }}"></a><a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" </a></h3>  
-   {% for posts in category %}
-<div class="row"> 
-      {% for post in posts reversed %}
-        {% if post.handout %} 
-    <div class="col s12 m4">
-      <div class="card">
-        <div class="card-image">
-           <a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="{{ post.title | append=" Handout"}}" aria-label="{{ post.title | append=" Handout"}}">
-           <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: ' Handout' }}" width="100%"></img>
-           </a>
-        </div>
-        <div>
-           <center><span class="card-title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank">{{ post.title }}</a></span></center>
-          <!-- <p class="description">{% if post.description %}{{ post.description | strip_html | strip_newlines | truncate: 250 }}{% else %}{{ post.content | strip_html | strip_newlines | truncate: 250 }}{% endif %}</p> -->
-         <!-- <a href="{{ post.url | prepend: site.baseurl }}">
-            Read More
-          </a>
-          <a class="rightaction" href="#modal-{{ post.url | slugify }}" aria-label="Embed code">
-            <i class="fa fa-code" aria-hidden="true"></i>
-              <!-- &lt; Embed &gt; -->
-          <!-- </a>
-            <a class="rightaction" href="https://twitter.com/intent/tweet?text={{ post.title }}&url={{site.url}}{{ site.baseurl }}{{ post.url }}&via={{ site.social.twitter }}&related={{ site.social.twitter }}" rel="nofollow" target="_blank" title="Share on Twitter" aria-label="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a class="rightaction" href="https://facebook.com/sharer.php?u={{site.url}}{{ site.baseurl }}{{ post.url }}" rel="nofollow" target="_blank" title="Share on Facebook" aria-label="Facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <!-- ty: https://superdevresources.com/share-buttons-jekyll/ -->
-           <!-- {% if post.handout %}
-            {% if post.handout contains 'http' %}
-                <a class="rightaction" href="{{ page.handout }}" target="_blank" title="PDF Handout" aria-label="Handout"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>
-            {% else %}
-                <a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="PDF Handout" aria-label="Handout"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a> --> 
-            {% endif %}
-        {% endif %}
-      </div>
-    </div>
-</div>
-            {% endif %}
-      {% endfor %}
-</div> 
-    {% endfor %}
+    <h3 class="category-title"><a id="{{ category | first }}"></a><a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" </a></h3>  
+        {% for posts in category %}
+            <div class="row"> 
+                {% for post in posts reversed %}
+                    {% if post.handout %} 
+                        <div class="col s12 m4">
+                            <div class="card">
+                                <div class="card-image">
+                                    <a class="rightaction" href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank" title="{{ post.title | append: " Handout" }}" aria-label="{{ post.title | append: " Handout" }}">
+                                        <img src="{{ site.url }}{{ site.baseurl }}{{ post.handout-thumbail }}" alt="{{ post.title | append: " Handout" }}" width="100%"></img></a>
+                                </div>
+                                <div>
+                                    <center><span class="card-title"><a href="{{ site.url }}{{ site.baseurl }}{{ post.handout }}" target="_blank">{{ post.title }}</a></span></center>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+            {% endfor %}
+            </div> 
+        {% endfor %}
 {% endfor %}
+
