--- a/index.html
+++ b/index.html
@@ -1,4 +1,33 @@
 ---
 layout: front
 title: "WIRE: Writing Instruction and Research Education at UCLA"
+
+<script type="application/ld+json">
+{ "@context": "http://schema.org", 
+ "@type": "EducationalOrganization",
+ "keywords": "research writing help skills learning support UCLA team strategies", 
+ "url": "https://uclalibrary.github.io/research-tips/",
+ "mainEntityOfPage": {
+    "@type": "WebPage",
+    "@id": "https://uclalibrary.github.io/research-tips/"
+  },
+ "author": {
+    "@type": "EducationalOrganization",
+    "name": "WI+RE",
+    "email": "uclawire@ucla.edu",
+    "parentOrganization": "UCLA Library",
+    "publishingPrinciples": "https://uclalibrary.github.io/research-tips/about/",
+    "alternateName": "Writing Instruction and Research Education",
+    "award": "ARL Film Festival Best Reflection of Diversity 2018",
+    "sameAs": [
+        "https://twitter.com/WIREbruin",
+        "https://www.facebook.com/WIREbruin"
+    ],
+  "brand": [
+    "UCLA",
+    "UCLA Library"
+  ]
+  }
+ }
+</script>
 ---
