--- a/index.html
+++ b/index.html
@@ -4,28 +4,29 @@ title: "WIRE: Writing Instruction and Research Education at UCLA"
 ---
 
 <script type="application/ld+json">
-{ "@context": "http://schema.org", 
+{ 
+ "@context": "http://schema.org", 
  "@type": "EducationalOrganization",
- "keywords": "research writing help skills learning support UCLA team strategies", 
+ "name": "WI+RE",
  "url": "https://uclalibrary.github.io/research-tips/",
+ "email": "uclawire@ucla.edu",
+ "description": "WI+RE (Writing Instruction + Research Education) is a UCLA community focused on helping all learners succeed in their writing and research projects.",
+ "alternateName": "Writing Instruction and Research Education",
+ "keywords": "research writing help skills learning support UCLA team strategies", 
  "mainEntityOfPage": {
     "@type": "WebPage",
     "@id": "https://uclalibrary.github.io/research-tips/"
   },
-  "@type": "EducationalOrganization",
-  "name": "WI+RE",
-  "email": "uclawire@ucla.edu",
-  "parentOrganization": "UCLA Library",
-  "publishingPrinciples": "https://uclalibrary.github.io/research-tips/about/",
-  "alternateName": "Writing Instruction and Research Education",
-  "award": "ARL Film Festival Best Reflection of Diversity 2018",
-  "sameAs": [
-      "https://twitter.com/WIREbruin",
-      "https://www.facebook.com/WIREbruin"
+ "parentOrganization": "UCLA Library",
+ "publishingPrinciples": "https://uclalibrary.github.io/research-tips/about/",
+ "award": "ARL Film Festival Best Reflection of Diversity 2018",
+ "sameAs": [
+    "https://twitter.com/WIREbruin",
+    "https://www.facebook.com/WIREbruin"
   ],
-  "brand": [
-    "UCLA",
-    "UCLA Library"
+ "brand": [
+   "UCLA",
+   "UCLA Library"
   ]
- }
+}
 </script>
